Implementation of keyboard mode

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -152,6 +152,37 @@
         </div>
       </section>
 
+      <!-- Control Mode Settings -->
+      <section class="section">
+        <h2 class="section-title">
+          <span>⌨️</span>
+          Control Mode
+        </h2>
+
+        <div class="setting-group">
+          <div class="setting-row">
+            <label for="control-mode">Input Mode</label>
+            <div class="setting-control">
+              <select id="control-mode">
+                <option value="mouse">Mouse</option>
+                <option value="keyboard">Keyboard</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="setting-row">
+            <label for="keyboard-view">Keyboard View</label>
+            <div class="setting-control">
+              <select id="keyboard-view">
+                <option value="narrow">Narrow</option>
+                <option value="broad">Broad</option>
+              </select>
+              <span class="setting-hint">Broad hides pacer + dimmer</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- RSVP Settings -->
       <section class="section">
         <h2 class="section-title">
